# familyroots

./: .gitignore  CLAUDE.md  package-lock.json  package.json  readme.md  tsconfig.base.json
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 14ababb98d69_testnet_gamification_tables.py  19cdebe81026_last_login_and_user_reported_issues.py  449af98a1296_future_predictions.py  481888380a06_memory_prompts.py  68a0bfedb8be_time_capsules_and_legacy_archive.py  6b612405961d_testnet_bug_reports.py  75780a782bf2_password_resets.py  b7d3e91c4f20_fund_nudges.py  (+18 more)
apps/api/app/: config.py  db.py  deps.py  lambda_handler.py  main.py  models.py  push_targets.py  return_urls.py  schemas.py  security.py
apps/api/scripts/: admin_bugs.py  build_email_preview.py  package_lambda.ps1  smoke_test.sh
apps/api/tests/: conftest.py  test_admin.py  test_auth.py  test_calls.py  test_capsule_rules.py  test_capsules.py  test_children.py  test_config_secrets.py  test_contributions.py  test_email_html.py  test_erasure.py  test_export.py  test_families.py  test_feed.py  test_fund_accounts.py  test_future_gifts.py  test_goals.py  test_invites.py  test_issues.py  test_legacy.py  test_maintenance.py  test_me.py  test_media_auth.py  test_member_avatar.py  test_membership.py  test_memory_prompts.py  test_native_push.py  test_notify.py  test_passwords.py  test_predictions.py  test_premium.py  test_premium_webhooks.py  test_relative_roles.py  test_security.py  test_social.py  test_stripe_webhook.py  test_supporter_access.py  test_testnet.py  test_vault.py
(+248 files in other folders)
