[project]
name = "futureroots-api"
version = "0.1.0"
description = "FutureRoots API — Family Wealth Network backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "email-validator>=2.2",
    "stripe>=11",
    "eth-account>=0.13",
    "pywebpush>=2",
    "pillow>=10",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]
aws = [
    "mangum>=0.19",
    "boto3>=1.34",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
